--- a/qof/website/qof.html
+++ b/qof/website/qof.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <head>
 <title>QOF - Query Object Framework</title>
@@ -7,8 +8,6 @@
 <A href="http://sourceforge.net"> 
 <IMG src="http://sourceforge.net/sflogo.php?group_id=83302&amp;type=5" 
 align=right width="210" height="62" border="0" alt="SourceForge Logo"></A>
-<br>
-<p>
 QOF, the Query Object Framework, provides a set of C Language utilities
 for performing generic structured complex queries on a set of data
 held by a set of C/C++ objects.  This framework is unique in that 
@@ -25,7 +24,6 @@ QOF is to provide a generic framework so that any query can be
 executed, including queries designed by the end-user.  Normally,
 this is possible only if you use SQL; QOF provides another, more 
 natural interface.
-</p>
 <p>
 QOF is an offshoot from the <a href="http://www.gnucash.org/">GnuCash
 Project</a>, where this framework is a deep, central component.  
