--- a/qof/website/qof.html
+++ b/qof/website/qof.html
@@ -8,6 +8,7 @@
 <A href="http://sourceforge.net"> 
 <IMG src="http://sourceforge.net/sflogo.php?group_id=83302&amp;type=5" 
 align=right width="210" height="62" border="0" alt="SourceForge Logo"></A>
+<img src="qof-logo.jpg" width="100" height="150" border="5" align=left>
 QOF, the Query Object Framework, provides a set of C Language utilities
 for performing generic structured complex queries on a set of data
 held by a set of C/C++ objects.  This framework is unique in that 
