--- a/qof/website/qof.html
+++ b/qof/website/qof.html
@@ -69,6 +69,8 @@ base functions from GnuCash:
 
 
 <h2>Project Goals</h2>
+Below are some concrete project goals. The more abstract ideas
+are <a href="why-qof.html">discussed here.</a>
 <ul>
 <li><p>
     Provide an object framework that allows programmers to create
