--- a/qof/website/why-qof.html
+++ b/qof/website/why-qof.html
@@ -1,6 +1,7 @@
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 TRANSITIONAL//EN">
 <html>
 <head>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; CHARSET=UTF-8">
 <title>Why Qof?</title>
 </head>
 <body fgcolor="#000000" bgcolor="#ffffff">
