--- a/qof/website/qof.html
+++ b/qof/website/qof.html
@@ -79,7 +79,7 @@ are <a href="why-qof.html">discussed here.</a>
     </p>
     <p>
     <b>Status:</b> Completed, in that queries can be built
-    and run.  Queries can be build with either a low-level C API,
+    and run.  Queries can be built with either a low-level C API,
     or by writing in an SQL-like language (for example, 
     <tt>SELECT memo FROM gncTransaction WHERE
     gncTransaction.date='15.06.2003';</tt>).  This is done
@@ -87,7 +87,7 @@ are <a href="why-qof.html">discussed here.</a>
     because, of course, it has to be run locally.  See the 
     <tt>sql-example.c</tt> file for a usage example.
     </p>
-    <br><br>
+    <br>
 <li><p>
     Provide integration with database backends.  In particular, the
     programmer should be able to use QOF to create a local 'cache'
@@ -115,7 +115,7 @@ are <a href="why-qof.html">discussed here.</a>
     got the major pieces ready to go, in the DWI project, but they're
     not integrated yet.
     </p>
-    <br><br>
+    <br>
 <li><p>
     The current 'client-side' SQL engine is rather basic in its
     features and performance.  For example, the current search 
@@ -127,7 +127,7 @@ are <a href="why-qof.html">discussed here.</a>
     might make for an excellent client-side sql engine: its small
     fast and optimized.
     </p>
-    <br><br>
+    <br>
 <li><p>
     Provide for off-line operation.  Because the object data is cached
     locally, users should be able to continue doing useful work even
@@ -137,7 +137,7 @@ are <a href="why-qof.html">discussed here.</a>
     <p>
     Status: just an idea, not started.
     </p>
-    <br><br>
+    <br>
 <li><p>
     Provide memory-management facilities. If objects in the local 
     object cache haven't been used in a while, and the application
