--- a/qof/website/why-qof.html
+++ b/qof/website/why-qof.html
@@ -184,6 +184,10 @@ below.
      type-checking/type-casting.  These other langauges still don't
      rescue you, they don't offer any advantage over C in regard to
      this deep, fundamental issue.
+     <br><br>
+     (Offtopic: try googling for the words "lambda" and your 
+     favorite programming langauge.  You will be surprised and 
+     intrigued by the results.)
      </p>
      <br>
 <li> <p><b>Why C (or C++)? Why not a better language?</b>
